<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverPassengerInfoDisplay">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_passenger"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/header_purple"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/currentLocationTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/current_location"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/passengerCurrentLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_passenger"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationTitle" />

    <TextView
        android:id="@+id/destinationTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengerCurrentLocation" />

    <TextView
        android:id="@+id/passengerDestination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_passenger"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationTitle" />

    <TextView
        android:id="@+id/phoneNumberTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengerDestination" />

    <TextView
        android:id="@+id/passengerPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_passenger"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTitle" />

    <Button
        android:id="@+id/directionToPassengerCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directions_to_passenger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengerPhoneNumber"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/directionToPassengerDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_passenger_s_destination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionToPassengerCurrentLocation" />

    <Button
        android:id="@+id/toDriverDestinationActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionToPassengerDestination" />
</androidx.constraintlayout.widget.ConstraintLayout>